Update Деревья и графы.README.md

--- a/Деревья и графы.README.md
+++ b/Деревья и графы.README.md
@@ -1,1 +1,1 @@
-# Practice work
+Python использует автоматическое управление памятью через механизм подсчета ссылок и сборщик мусора. Когда объект перестает быть достижимым, память освобождается автоматически. Это делает код простым и безопасным, но может приводить к дополнительным накладным расходам. Преимущества в Python заключаются в том, что нет утечки памяти, просто использовать и быстрая разработка. Недостатками являются меньший контроль над памяютью, возможные задержки из-за сборщика мусора и большой расход памяти. C++ предоставляет полный контроль над памятью через указатели и ручное выделение/освобождение памяти. Современный C++ рекомендует использовать умные указатели для автоматического управления. Преимущества C++: полный контроль над памятью, максимальная производительность и предсказуемое время выполнения. Недостатки C++: возможна утечка памяти, сложность отладки и большой объем кода. Java использует сложный сборщик мусора, который периодически освобождает недостижимые объекты. Память выделяется только через оператор new, освобождение происходит автоматически. В Java у нас надежность и безопасность, хороший баланс контроля и удобства и кроссплатформенность. Однако в данном языке программирования бывают непредсказуемые паузы сборщика мусора, большой расход памяти и меньшая производительность чем C++.
